--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -3,16 +3,21 @@ kind: Application
 metadata:
   name: postgres-operator
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "1" # ✅ Ensures correct sync order
 spec:
   project: default
   source:
     repoURL: https://github.com/mattydroidx/postgres-operator-deployments.git
     targetRevision: main
-    path: app/
+    path: apps/ # ✅ Ensure this is correct
   destination:
     server: https://kubernetes.default.svc
-    namespace: default # ✅ Change to the namespace where your Operator runs
+    namespace: default
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true # ✅ Creates namespace if missing
+      - ApplyOutOfSyncOnly=true # ✅ Only applies when out of sync
